# Multi-agent

./: README.md  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  graph.py  nodes.py  state.py
app/models/: __init__.py  model.py
app/routers/: agent.py
app/tools/: __init__.py  rag.py  tools.py
scripts/: ingest.py
tests/: test_agents.py
